# BitChess

./: CMakeLists.txt  README.md
BitChess/: README.md
BitChess/src/game/: game.hpp
BitChess/src/game/evaluation/: evaluator.hpp  search.hpp
BitChess/src/position/: move.hpp  position.hpp
BitChess/src/position/pieces/: king.cpp  pawn.cpp  pieces.hpp
BitChess/src/util/: bitboard.hpp  movelookup.hpp  util.hpp
BitChess/test/position/pieces/: test_pawn_movegen.cpp
BitChess/test/util/: test_bitboard.cpp  test_index_to_algebraic.cpp  test_movelookup_king.cpp
src/position/pieces/: pawn.cpp
